# waveos

./: .gitignore  .txt  app.py  gesture.spec  gestureGUI.py  inference.py  main.py  pyproject.toml
models/: STATIC_model_t1.keras  STATIC_model_t2.keras  action_model.onnx  static_model.onnx
src/collections/: action_collect.py  motion_collect.py  static_collect.py
src/commands/: executor.py  profiles.py
src/detection/: action_detect.py  static_detect.py
src/detection/models/: action_model.keras
src/training/: action_training.py  callbacks.py  static_training.py
src/utils/: app_state.py  directory_creator.py  gui_utils.py  keypoint_utils.py  landmark_utils.py
