[project]
name = "copmuter-control-by-human-gesture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comtypes>=1.4.16",
    "customtkinter>=5.2.2",
    "keyboard>=0.13.5",
    "mediapipe>=0.10.33",
    "onnxruntime>=1.25.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.20.0",
    "pywin32>=311",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "tf2onnx>=1.17.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
